--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
-    "hbs": "^4.1.1",
-    "mongodb": "^3.5.6"
+    "hbs": "^4.1.1"
   },
   "devDependencies": {
     "chalk": "^4.0.0"
