--- a/package.json
+++ b/package.json
@@ -13,7 +13,5 @@
     "express": "^4.17.1",
     "hbs": "^4.1.1"
   },
-  "devDependencies": {
-    "chalk": "^4.0.0"
-  }
+  "devDependencies": {}
 }
