--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A first big project in web",
   "main": "index.js",
   "scripts": {
-    "start": "node src/app.js"
+    "start": "node src/index.js"
   },
   "repository": {
     "type": "git",
