removing index.js

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "mysite",
   "version": "1.0.0",
   "description": "A first big project in web",
-  "main": "app.js",
+  "main": "src/app.js",
   "scripts": {
     "start": "node src/app.js"
   },
