--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.5.7",
     "mongoose": "^5.9.13",
+    "multer": "^1.4.2",
     "randomstring": "^1.1.5",
+    "sharp": "^0.25.4",
     "validator": "^13.0.0"
   },
   "devDependencies": {
