--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "mongodb": "^3.5.7",
     "mongoose": "^5.9.13",
     "multer": "^1.4.2",
+    "nodemailer": "^6.4.10",
     "randomstring": "^1.1.5",
     "sharp": "^0.25.4",
     "validator": "^13.0.0"
